[package]
name = "barotool"
version = "0.1.0"
authors = ["Christopher Head"]
edition = "2018"
resolver = "2"
description = "Manipulates Barotrauma save files and submarines"
repository = "https://gitlab.com/Hawk777/barotool"
license = "GPL-3.0-only"

[dependencies.byteorder]
version = "^1.4"

[dependencies.clap]
default-features = false
features = ["cargo", "std", "wrap_help"]
version = "^3.1"

[dependencies.libflate]
version = "^1.1.2"

[dependencies.strong-xml]
version = "^0.6"
